13. Async call to fetch advice from a third party API

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
     <h1>JavaScript Brushup</h1>
 
+    <a href="./advice.html">Advice Application</a>
+
     <script src="./main.js"></script>
   </body>
 </html>
