15. Initial Functionality to show advice done!

--- a/advice.html
+++ b/advice.html
@@ -7,6 +7,19 @@
       content="width=device-width, initial-scale=1.0" />
     <title>Advice App in Pure Vanilla JavaScript</title>
   </head>
+
+  <style>
+    .advice,
+    .count {
+      font-weight: bold;
+      font-size: 1.5rem;
+    }
+    .btn {
+      padding: 0.5rem 1rem;
+      border-radius: 0.5rem;
+      cursor: pointer;
+    }
+  </style>
   <body>
     <h1>Advice App</h1>
     <p>
