16. Count Variable also updating

--- a/advice.html
+++ b/advice.html
@@ -9,11 +9,16 @@
   </head>
 
   <style>
-    .advice,
-    .count {
+    .advice {
       font-weight: bold;
       font-size: 1.5rem;
     }
+
+    .count {
+      font-weight: bolder;
+      font-size: 2.5rem;
+    }
+
     .btn {
       padding: 0.5rem 1rem;
       border-radius: 0.5rem;
