19. Program Structure Covered!

--- a/program-structure.html
+++ b/program-structure.html
@@ -19,6 +19,50 @@
       statement
     </p>
 
+    <h2>Summary</h2>
+
+    <p>
+      <strong>Program:</strong>
+      Programs are made up of statements.
+    </p>
+    <p>
+      <strong>Expression:</strong>
+      Fragment of code that produces a
+      <em>value</em>
+      .
+    </p>
+
+    <p>
+      <strong>Binding:</strong>
+      Piece of data (values) under a name.
+    </p>
+    <p>
+      <strong>State:</strong>
+      Bindings are used for tracking state in our program.
+    </p>
+
+    <p>
+      <strong>Environment:</strong>
+      Collection of bindings and their values at a particular time.
+    </p>
+
+    <p>
+      <strong>Standard Bindings:</strong>
+      JavaScript always puts the number of standard bindings in your environment. For example:
+      <code>document object, setTimeout, setInterval, fetch() etc etc etc</code>
+    </p>
+
+    <p>
+      <strong>Function:</strong>
+      Function is a
+      <em>special value</em>
+      in JavaScript that
+      <em>encapsulate piece of program.</em>
+      You can invoke them by writing
+      <code>functionName(argument1, argument2).</code>
+
+      Such a function call may result in an expression when the function returns the value.
+    </p>
     <script src="./program-structure.js"></script>
   </body>
 </html>
