21. Pattern appended on the DOM

--- a/Exercises/1.control-structures/1.control-structure.html
+++ b/Exercises/1.control-structures/1.control-structure.html
@@ -13,6 +13,7 @@
 
     <p><strong>Patterns:</strong></p>
 
+    <div class="pattern"></div>
     <script src="./1.control-structure.js"></script>
   </body>
 </html>
