23. Fizz Buzz problem done!

--- a/Exercises/1.control-structures/1.control-structure.html
+++ b/Exercises/1.control-structures/1.control-structure.html
@@ -13,7 +13,13 @@
 
     <p><strong>Patterns:</strong></p>
 
+    <!-- Problem-1 -->
     <div class="pattern"></div>
+
+    <p><strong>FizzBuzz Problem</strong></p>
+    <!-- Problem-2: Fizz Buzz problem -->
+
+    <div class="fizzBuzz"></div>
     <script src="./1.control-structure.js"></script>
   </body>
 </html>
