24. ChessBoard Example --- One Solution Found

--- a/Exercises/1.control-structures/1.control-structure.html
+++ b/Exercises/1.control-structures/1.control-structure.html
@@ -20,6 +20,10 @@
     <!-- Problem-2: Fizz Buzz problem -->
 
     <div class="fizzBuzz"></div>
+
+    <!-- Problem-3: Chess Board -->
+
+    <div class="chess"></div>
     <script src="./1.control-structure.js"></script>
   </body>
 </html>
