--- a/functions/functions.html
+++ b/functions/functions.html
@@ -73,6 +73,19 @@
     </p>
 
     <p>In Pre-2015 JavaScript, only functions created new scope with var keyword.</p>
+
+    <h2>Lexical Scope</h2>
+    <p>
+      The
+      <strong>set of bindings</strong>
+      visible inside a block is determined by the
+      <strong>place of that block</strong>
+      in the program text. This approach to
+      <em>binding visibility</em>
+      is called
+      <strong>lexical scope</strong>
+      .
+    </p>
     <script src="./functions.js"></script>
   </body>
 </html>
