--- a/functions/functions.html
+++ b/functions/functions.html
@@ -108,6 +108,17 @@
       They are conceptually moved to the top of their scope and can be used by all the code in that
       scope
     </p>
+
+
+    <h2>Arrow Functions:</h2>
+    <p>
+        Shorter form of function expression
+        <code>
+            ()=>{}
+        </code>
+    </p>
+
+    <p>There is no special reason to have both arrow function and function expressions in JavaScript, except for a very minor difference (to be discussed later)</p>
     <script src="./functions.js"></script>
   </body>
 </html>
