--- a/functions/functions.html
+++ b/functions/functions.html
@@ -129,6 +129,12 @@
 
     <p>When a function is invoked, function is loaded on the top of stack, and when the function returns, the function is popped out of stack.<strong>However, this popped function helps call stack to return to the caller function.</strong></p>
 
+
+    <h2>Optional Parameters:</h2>
+    <p>JavaScript is extremely broad-minded about the number of arguments you can pass to a function. If you pass too many, the extra ones are ignored. If you pass too few, the missing parameters are assigned the value undefined.</p>
+
+
+    <p>If you write an = operator after a parameter, followed by an expression, the value of that expression will replace the argument when it is not given.</p>
     <script src="./functions.js"></script>
   </body>
 </html>
