35. Closures - A marvel of JS

--- a/functions/functions.html
+++ b/functions/functions.html
@@ -135,6 +135,12 @@
 
 
     <p>If you write an = operator after a parameter, followed by an expression, the value of that expression will replace the argument when it is not given.</p>
+
+
+    <h2>CLOSURE</h2>
+
+    <p>The ability to treat <strong>functions as values</strong>, combined with the fact that <strong>local bindings are recreated every time a function is called</strong> 
+        , brings up an interesting question: <strong>what happens to local bindings when the function call that created them is no longer active?</strong> </p>
     <script src="./functions.js"></script>
   </body>
 </html>
