36. FarmAnimal Problem with function and loop

--- a/functions/functions.html
+++ b/functions/functions.html
@@ -141,6 +141,35 @@
 
     <p>The ability to treat <strong>functions as values</strong>, combined with the fact that <strong>local bindings are recreated every time a function is called</strong> 
         , brings up an interesting question: <strong>what happens to local bindings when the function call that created them is no longer active?</strong> </p>
+
+
+        <p>Thinking about programs like this takes some practice. A good men- tal model is to think of function values as containing both the code in their body and the environment in which they are created. When called, the function body sees the environment in which it was created, not the environment in which it is called.
+</p>
+
+<p>The following code shows an example of this. It defines a function, wrapValue, that creates a local binding. It then returns a function that accesses and returns this local binding:
+
+   <pre>
+<code>
+ function wrapValue(n) {
+   let local = n;
+   return () => local;
+}
+ let wrap1 = wrapValue(1);
+ let wrap2 = wrapValue(2);
+ console.log(wrap1());
+ // → 1
+ console.log(wrap2());
+// → 2
+
+</code>
+</pre>
+
+<p>
+This is allowed and works as you’d hope—both instances of the binding can still be accessed. This situation is a good demonstration of the fact that local bindings are created anew for every call, and different calls don’t affect each other’s local bindings.
+This feature—being able to reference a specific instance of a local
+binding in an enclosing scope—is called closure. A function that references bindings from local scopes around it is called a closure.
+</p>
+</p>
     <script src="./functions.js"></script>
   </body>
 </html>
