--- a/4.ArraysAndObjects/rest-operator/rest.html
+++ b/4.ArraysAndObjects/rest-operator/rest.html
@@ -8,13 +8,19 @@
     <title>Rest Operator</title>
   </head>
   <body>
-    <h1>Rest Operator</h1>
+    <h1>Rest Operator & Spread Operator</h1>
 
     <p>
       It can be useful for a function to receive any number of arguments. We do this with a rest
       operator ...
     </p>
 
+    <p>
+      We can spread out array elements as well. Calling a
+      <strong>max(...numbers)</strong>
+      function with three similar dots, now spreads out the array elements and passes them as
+      separate arguments.
+    </p>
     <script src="./rest.js"></script>
   </body>
 </html>
