63. Abstracting repetition --mental model

--- a/5.HigherOrderFunctions/hof.html
+++ b/5.HigherOrderFunctions/hof.html
@@ -21,6 +21,17 @@
       <strong>bugs to hide</strong>
       , making them hard to find.
     </p>
+
+    <h2>Abstractions</h2>
+    <p>
+      <strong>Abstractions</strong>
+      give us the ability to talk about problems at a higher (or more abstract) level, without
+      getting sidetracked by uninteresting details.
+    </p>
+
+    <h3>Plain functions are a good way to build abstractions.</h3>
+    <p>It is common for a program to do something a given number of times.</p>
+
     <script src="./hof.js"></script>
   </body>
 </html>
