64. An abstracted out version of repeating something n times.

--- a/5.HigherOrderFunctions/hof.html
+++ b/5.HigherOrderFunctions/hof.html
@@ -32,6 +32,11 @@
     <h3>Plain functions are a good way to build abstractions.</h3>
     <p>It is common for a program to do something a given number of times.</p>
 
+    <h4>
+      Question: Can we abstract
+      <strong>“doing something N times”</strong>
+      as a function? We write a function which calls a loop n times.
+    </h4>
     <script src="./hof.js"></script>
   </body>
 </html>
