65. Abstrating out action (fxn) in the example

--- a/5.HigherOrderFunctions/hof.html
+++ b/5.HigherOrderFunctions/hof.html
@@ -37,6 +37,24 @@
       <strong>“doing something N times”</strong>
       as a function? We write a function which calls a loop n times.
     </h4>
+
+    <h4>
+      But what if we
+      <em>want to do something</em>
+      other than logging.
+    </h4>
+    <p>
+      Because
+      <strong>"doing something"</strong>
+      , can be represented as a
+      <strong>function</strong>
+      and
+      <em>functions are just values.</em>
+      and we can pass our
+      <strong>"action" as a "function value"</strong>
+      (means as a function)
+    </p>
+
     <script src="./hof.js"></script>
   </body>
 </html>
